# structura

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data-layout.md  development.md
src/structura/: __init__.py  cli.py  config.py  geo.py  intake.py  metrics.py  models.py  pipeline.py  profile.py  temporal.py
src/structura/db/: __init__.py  api.py  base.py  file.py  postgis.py
src/structura/dem/: __init__.py  _common.py  edge_tracing.py  relief.py  wall_tracing.py
src/structura/segmentation/: __init__.py  _common.py  base.py  cellpose.py  classical.py  sam.py
tests/: conftest.py  test_cellpose.py  test_classical.py  test_common.py  test_edge_tracing.py  test_file_sink.py  test_geo.py  test_make_segmenter.py  test_metrics.py  test_pipeline.py  test_relief.py  test_sam.py  test_skeleton.py  test_smoke.py  test_wall_tracing.py
