[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structura-workflow"
version = "0.1.0"
description = "AI-assisted vectorisation of photogrammetric excavation data into georeferenced vectors for a PostGIS excavation database."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Patrick", email = "leiverkus@gmail.com" }]

# Core deps kept light; heavy/optional model + geo stacks live in extras below.
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Raster I/O, georeferencing, raster->vector, topology
geo = [
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "scikit-image>=0.22",
]
# 2D segmentation backends
sam = ["segment-anything", "torch", "opencv-python"]
cellpose = ["cellpose>=3.0"]
# Database sinks
db = ["psycopg[binary]>=3.1", "SQLAlchemy>=2.0", "GeoAlchemy2>=0.14"]
# Django-API sink
api = ["httpx>=0.27"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
structura = "structura.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/structura"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
